fixed the width issue of the scorecard on mobile

--- a/mzalendo/core/static/sass/basic.scss
+++ b/mzalendo/core/static/sass/basic.scss
@@ -515,6 +515,7 @@ pre {
     ul.scorecard {
       @include list-reset-soft;
       @include inline-block;
+      width:100%;
       li {
         article {
           padding:10px;
